fixed spacing of about page paragraph and links, fix underline of name logo spacing issue

--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@ body{
 }
 
 .about-img{
-  display: block;
   float: right; 
   padding-bottom: 50px;
-  padding-left: 50px
+  padding-left: 25px;
+  max-width: 33%;
+  margin: 0 0 1em 2em;
 }
 
 .about-text{
@@ -45,7 +46,7 @@ body{
   color: #424242;
   font-weight: 300;
   font-size: 35px;
-  border-bottom: 2px solid transparent;
+  border-bottom: 1px solid white;
   text-decoration: none;
   transition: border-bottom 0.1s;
   white-space: nowrap;
@@ -60,11 +61,10 @@ body{
   font-weight: 100;
   font-family: 'Courier New', Courier, monospace;
   font-size: 20px;
-  border-bottom: 2px solid transparent;
+  border-bottom: 1px solid transparent;
   text-decoration: none;
   transition: border-bottom 0.1s;
-  padding: 7px;
-  padding-bottom: 0px;
+  padding: 0px 7px 0px 0px ;
 }
 
 .site-footer{
@@ -80,7 +80,6 @@ body{
 .f-wrapper{
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
   padding-right: 15px;
   display: flex;
   flex-wrap: wrap;
